<resources>
    <integer name="com_vk_sdk_AppId">7533338</integer>
    <string name="app_name">Salamport+</string>
    <string name="login">VK</string>
    <string name="logout">Logout</string>
    <string name="profile">Профиль</string>
    <string name="meet">Знакомства</string>
    <string name="games">Развлечения</string>
    <string name="media">Медиа</string>
    <string name="spravka">Справочник</string>
    <string name="medicine" translatable="false">Медицина</string>
    <string name="service" translatable="false">Сервисы</string>
    <string name="work">Работа</string>
    <string name="personal_data">Личные данные</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="bdate">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="hometown">Родной город</string>
    <string name="town">Город</string>
    <string name="contact">Контактная информация</string>
    <string name="phone">Телефон</string>
    <string name="email">E-Mail</string>
    <string name="vk">ВКонтакте</string>
    <string name="about">О себе</string>
    <string name="study">Место учебы</string>
    <string name="workplace">Место работы</string>
    <string name="interests">Интересы</string>
    <string name="loginWithoutVk">Войти по паролю</string>
    <string name="friends">Друзья</string>
    <string name="friendsList">Список друзей</string>
    <string name="searchFriends">Поиск новых друзей</string>
    <string name="searchResults">Результаты поиска</string>
    <string name="requestsForFriends">Заявки</string>
    <string name="places">Заведения</string>
    <string name="advertisements">Объявления</string>
    <string name="tinder">Поиск соседа</string>
    <string name="poiskFigni">Поиск магазинов, аптек, кафе, хостелов, парикмахерских и других мест</string>
    <string name="razmestite">Разместите объявление для продажи товаров</string>
    <string name="poiskSoseda">Найдите себе соседа для съема жилья</string>
    <string name="authorize_location">location plz</string>
    <string name="chooseCat">Выберите желаемые категории</string>
    <string name="m">Мужской</string>
    <string name="f">Женский</string>
    <string name="rand">Любой</string>
    <string name="age">Возраст</string>
    <string name="range">Расстояние</string>
    <string name="language">Язык</string>
    <string name="ru">Русский</string>
    <string name="az">Армянский</string>
    <string name="start">Начать</string>
    <string name="NAIDITE">Найдите себе новых знакомых или вторую половинку</string>
    <string name="PROVERTE">Проверьте отклики на взаимный интерес</string>
    <string name="OTKlIKI">Отклики</string>
    <string name="ISHU">Ищу знакомства</string>
    <string name="muzika">Музыка</string>
    <string name="video">Видео</string>
    <string name="notification_channel_name">music</string>
    <string name="pause">Пауза</string>
    <string name="play">Стар</string>
    <string name="stop">Стоп</string>
    <string name="OTKLIKI">Ваши отклики</string>
    <string name="completed_tinder">Закончились предложения</string>
    <string name="chats">Чаты</string>
</resources>
