<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/yascheritsafon"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="0.8"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/zhelto"
            android:text="@string/places" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/baumans"
            android:text="@string/poiskFigni" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:background="@color/rozovo"
            android:text="@string/advertisements" />

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/baumans"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/razmestite" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinder"
            android:fontFamily="@font/baumans"
            android:background="@color/orangevo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poiskSoseda"
            android:textAlignment="center"
            android:fontFamily="@font/baumans"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp">
        <include layout="@layout/footer"/>
    </LinearLayout>
</LinearLayout>