<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/yascheritsafon"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="0.8"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/baumans"
            android:text="@string/NAIDITE"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/goToTinderFilter"
            android:background="@color/zhelto"
            android:text="@string/start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:text="@string/PROVERTE"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orangevo"
            android:id="@+id/OTKLIKI"
            android:fontFamily="@font/baumans"
            android:text="@string/OTKlIKI" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:text="@string/ISHU"
            android:textAlignment="center" />
            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:id="@+id/SWITCH"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <include layout="@layout/footer" />
    </LinearLayout>
</LinearLayout>