<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/MediaTrackLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/MusicTitle"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MusicAuthor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goToPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="prev" />

        <Button
            android:id="@+id/goToPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause" />

        <Button
            android:id="@+id/goToPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/goToNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="next" />

        <Button
            android:id="@+id/goToStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <include layout="@layout/footer" />
    </LinearLayout>
</LinearLayout>